static/css/default.css
/* Ugly hack, fixes body heigh issue
I, (thorvald), believe that the issue is caused by the html,body rule which sets height to 100%.
But I do not have time to test this properly, because of exams, so I apply this hacky rule.
If the html,body height-rule is indeed not necessary, is should be removed (I believe it was added by me....)
*/


:root {
    --nabla-yellow: #FFD500;
    --nabla-yellow-dark: #FDC500;
    --nabla-yellow-light: #ffff72;
    --nabla-blue: #003F88; /* navbar + overskrifter */
    --nabla-blue-dark: #00296B;
    --nabla-blue-light: #00509D;
    --nabla-background: rgba(0, 80, 157, 0.05);
    --event: #5cb85c;
    --bedpres: #f5b507;
    --box-color: #ffffff;
    --text-color: #000000;
    --header: #003F88;
}

.darkmode--activated{
    --nabla-yellow: #fa9a2c;
    --nabla-yellow-dark: #fa9a2c;
    --nabla-yellow-light: #fa9a2c;
    --nabla-blue: #2277e7; /* navbar + overskrifter */
    --nabla-blue-dark: #00296B;
    --nabla-blue-light: #fa9a2c;
    --nabla-background: rgba(0, 80, 157, 0.05);
    --event: #5cb85c;
    --bedpres: #f5b507;
    --box-color: #000000;
    --text-color: #ffffff;
    --header: #ffffff;

}

.list-group-item{
    background-color: var(--box-color);
}

.nabla-frontpage-header{
    color: var(--header);
}

.gtext{
    color: var(--text-color);
}

.list-container{
    color: var(--text-color);
}

.pop-up-dark{
    background-color: var(--box-color);
}

a {
    color: var(--nabla-blue);
}

a:hover {
    color: var(--nabla-blue-dark);
    text-decoration: none;
}

/* MAIN */
html {
    height: 100%;
}

body {
    height: 100%;
    background-color: var(--nabla-background);
    color: var(--text-color);
}

#content {
    min-width: 360px;
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    background-color: var(--nabla-background);
}

#full-body {
    flex: 1;
    overflow: hidden;
    display: flex;
}

#mainContent {
    flex: 1;
    padding-top: 1rem;
    padding-bottom: 1rem;
}

.logo {
    padding: 7px;
}

nav.nabla-navbar {
    background: var(--nabla-blue);
    box-shadow: 0 1px 4px rgba(0, 0, 0, .05);

}


.card {
    box-shadow: 0 1px 4px rgba(0, 0, 0, .05);
    background-color: var(--box-color);
}

.box {
    word-wrap: break-word;
    box-shadow: 0 0 2px rgba(0, 0, 0, 0.24);
    padding: 0;
    overflow: hidden;
    margin-bottom: 7px;
    color: var(--box-color);
}

.box header a {
    color: #222222;
}

.box header {
    border-top: 4px solid #222222;
    padding-left: 7px;
    padding-right: 7px;
}

.row-same-height {
    display: flex;
    display: -webkit-flex;
    flex-wrap: wrap;
}

.row-same-height [class*='col-'] {
    margin-bottom: 20px;
    flex: 1 1 100%;
}

.row-same-height [class*='col-'] [class*='box'] {
    height: 100%;
}

@media (min-width: 768px) {
    .row-same-height {
        display: flex;
        display: -webkit-flex;
        flex-wrap: wrap;
    }

    .row-same-height [class*='col-'] {
        margin-bottom: 20px;
        /*
        * HAAAACK FOR Å FIKSE SAFARI < 11.0.1
         */
        flex: 1 1 49%;
    }
}


.box p {
    padding-left: 7px;
    padding-right: 7px;
    padding-bottom: 7px;
}

/* Div that holds all parts of page except footer */
#whitebox {
    background: white url(../img/bgnoise.png);
    border-bottom: 1px solid black;
    padding-top: 20px;
    padding-bottom: 20px;
}

@media (max-width: 767px) {
    #whitebox {
        margin-left: -20px;
        margin-right: -20px;
        padding-right: 20px;
        padding-left: 20px;
    }
}

aside h3 {
    margin-top: 15px;
}

aside h3:first-child {
    margin-top: 0;
}

form.dropdown-menu {
    padding: 15px;
}

form.dropdown-menu input {
    width: 15em;
    margin-bottom: 15px;
}

/* Typography */

h1 {
    margin-bottom: 8px;
    font-size: 32px;
    font-weight: bold;
    line-height: 37px;
    margin-top: 15px;
}

h2 {
    margin-bottom: 8px;
    font-size: 30px;
    font-weight: bold;
    line-height: 37px;
    margin-top: 15px;
}

h3 {
    margin-bottom: 8px;
    font-size: 24px;
    font-weight: bold;
    line-height: 28px;
}


p {
    font-size: 14px;
    line-height: 20px;
}

#whitebox p {
    color: rgb(50, 50, 50);
}

/* Registration */

.registrations {
    margin-top: -5px;
}

.registrations span {
    margin-left: 3px;
}

.registrations .waiting-place {
    opacity: 0.5;
}


/* Utility classes */

/* Some floats for articles */
img[alt=right] {
    float: right;
}

img[alt=left] {
    float: left;
}

/* Remove code styling from rendered LaTeX */
code.jax {
    background: inherit;
    border: none;
    color: inherit;
    font: inherit;
    margin: 0;
}

.pagination {
    text-align: center;
}

.center {
    text-align: center;
}

.wide {
    width: 100%;
}

.clear {
    clear: both;
}

/* REKLAME */
.ad.box {
    border-radius: 5px;
    border-width: 2px;
    font-size: 90%;
    padding-bottom: 20px;
    background-color: #ffffff;
}

.ad.box p {
    padding: 5px;
}

.ad.box img {
    text-align: center;
}


/* MathJAX customisation */

.MathJax_Display {
    margin-bottom: -15px !important;
    margin-top: 3px !important;
}


/* FOOTER */

.nabla-footer {
    /* TODO: Add cross-browser support */
    background-color: var(--nabla-blue);
    color: var(--white);
    padding-top: 30px;
    width: 100%;
    box-shadow: 0 1px 4px rgba(0, 0, 0, .05);

}


/* h2 is black, so make it white */
footer h2 {
    color: var(--white);
}

footer a {
    color: var(--light);
    font-weight: bold;

}

footer a:hover {
    color: var(--light);
    font-weight: bold;

}


footer .kontakt table {
    
}

footer .kontakt table th {
}

footer .kontakt table td {
    border-top: 0;
}

footer .kontakt table td:first-child {
    color: white;
}

.footer-info{
    color: black;
}

/* Social icons in footer */
.social-icon {
    margin-right: 8px;
    text-decoration: none !important;
    color: inherit !important;
}

.social-icon:last-child {
    margin-right: 0px;
}

.social-icon:hover {
    transform: scale(1.1);
}

/* COMMENTS */
.comments-header {
    margin-top: 30px;
}

form.add-comment {
    margin-top: 20px;
    margin-left: 0;
    margin-right: 0;
}

form.add-comment .control-group:first-of-type {
    padding-top: 9px;
}

form.add-comment textarea {
    width: 100%;
    height: 5rem;
}

.comment .text {
    width: 100%;
    overflow: hidden;
}

.comment .info {
    margin-bottom: 10px;
}

.comment .author {
    font-weight: bold;
}

.comment .date {
    color: #999;
}

#comment-help-buttons {
    margin-top: 20px;
}

/* for logo + søkefelt i headeren */

form#searchtop {
    display: inline-block;
    padding-top: 10px;
    width: 150px;
}

/* Endringer i Bootstrap-farger */
.navbar-inner {
    border: 1px solid #c0c0c0;
}

/* Navbar border */
.navbar-right.dropdown {
    margin-right: 0px;
}

/* News */

.advert {
    height: 100%;
}

.advert_footer {
    bottom: 0;
}

.btn-read-more {
    background-image: linear-gradient(to bottom, #fff 0, #f8f8f8 100%);
}

.btn-read-more:hover {
    background-image: linear-gradient(to bottom, #f2f2f2 0, #eaeaea 100%);
}

li.pager-counter {
    cursor: default;
}

.countdown {
    font-family: sans-serif;
    font-size: 50px;
    padding: 10px;
}

.c-event {
    background-color: #5cb85c;
}

.c-bedpres {
    background-color: #f5b507;
}

/* Classes the mimic boostrap (primary ...)*/
.fixed-tab-height {
    height: 340px;
    Overflow-y: auto;
    Overflow-x: hidden;
}

.btn-nabla-blue {
    background: var(--nabla-blue);
    color: #f8f9fa;
}

.btn-nabla-blue:hover {
    background: var(--nabla-blue-dark);
    color: #f8f9fa;
}

.btn-nabla-blue-light {
    background: var(--nabla-blue-light);
    color: #f8f9fa;
}

.btn-nabla-blue-light:hover {
    background: var(--nabla-blue);
    color: #f8f9fa;
}
.btn-nabla-blue-dark {
    background: var(--nabla-blue-dark);
    color: #f8f9fa;
}

.btn-nabla-blue-dark:hover {
    background: black;
    color: #f8f9fa;
}



.btn-nabla-yellow {
    background: var(--nabla-yellow);
    color: #343a40;
}

.btn-nabla-yellow:hover {
    background: var(--nabla-yellow-dark);
    color: #121416;
}

.btn-nabla-yellow-dark {
    background: var(--nabla-yellow-dark);
    color: #343a40;
}

.btn-nabla-yellow-dark:hover {
    background: #f3ab01;
    color: #121416;
}


.btn-outline-nabla-blue {
    background-color: transparent;
    background-image: none;
    border-color: var(--nabla-blue);
    color: var(--nabla-blue);
}

.btn-outline-nabla-blue:hover {
    background: var(--nabla-blue);
    color: #f8f9fa;
}

.btn-outline-nabla-yellow {
    background-color: transparent;
    background-image: none;
    border-color: var(--nabla-yellow);
    color: var(--nabla-yellow);
}

.btn-outline-nabla-yellow:hover {
    background: var(--nabla-yellow);
    color: #343a40;
}

.border-nabla-blue {
    border-color: var(--nabla-blue) !important;
}

.border-nabla-yellow {
    border-color: var(--nabla-yellow) !important;
}

.text-nabla-blue {
    color: var(--nabla-blue);
}

.text-nabla-yellow {
    color: var(--nabla-yellow);
}

.nounderline {
    text-decoration: none !important
}

